gitops/hello-visitor-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-visitor-service-staging
  namespace: staging
spec:
  selector:
    app: hello-visitor
  ports:
  - port: 8899
    targetPort: 8888
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: hello-visitor-service
  namespace: production
spec:
  selector:
    app: hello-visitor
  ports:
  - port: 8888
    targetPort: 8888
    protocol: TCP
